[metadata]
name = steampunk-scanner
url = https://scanner.steampunk.si/
project_urls =
    Source Code = https://gitlab.xlab.si/steampunk/steampunk-scanner/cli
    Bug Tracker = https://gitlab.xlab.si/steampunk/steampunk-scanner/cli/-/issues
    Documentation = https://scanner.steampunk.si/
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Quality scanner for Ansible Playbooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ansible
    automation
    scanner
    quality
    playbook
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Ansible

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  pyyaml == 5.4.1
  requests == 2.26.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  steampunk-scanner = cli:main
