[metadata]
name = steampunk-scanner
url = https://pypi.org/project/steampunk-spotter/
project_urls =
    Source Code = https://github.com/xlab-steampunk/steampunk-scanner-cli
    Bug Tracker = https://github.com/xlab-steampunk/steampunk-scanner-cli/issues
    Documentation = https://github.com/xlab-steampunk/steampunk-scanner-cli
author = XLAB d.o.o.
author_email = pypi@xlab.si
license_file = LICENSE
description = Quality scanner for Ansible Playbooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ansible
    automation
    scanner
    quality
    playbook
classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Ansible

[options]
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  steampunk-spotter
